--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -192,8 +192,7 @@
     
 
     <div class="container text-center">
-        <h2 class="pb-5 mbr-fonts-style display-2">
-            WHAT OUR CLIENTS SAY</h2>
+        <h2 class="pb-5 mbr-fonts-style display-2">Client Testimonials</h2>
 
         <div class="carousel slide" data-ride="carousel" role="listbox">
             <div class="carousel-inner">
