--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -158,7 +158,7 @@
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style">Al-Nasar Lab &amp; Diagnostic Centre&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Al-Nasar Lab &amp; Diagnostic Centre, one of the premier diagnostics setups in Pakistan has selected EthosMED's PACS &amp; Teleradiology solution to streamline its ever-increasing portfolio of Radiology diagnostics services including MRI, CT, Flouroscopy, DEXA Scan, Mammography, Dental CT,  3D Dental X-Ray, Digital X-Ray, Ultrasound, and Nuclear Medecine.<br><br><strong>www.alnasarlab.com</strong><br>
+                            Al-Nasar Lab &amp; Diagnostic Centre, one of the premier diagnostics setups in Pakistan has selected EthosMED's PACS &amp; Teleradiology solution to streamline its ever-increasing portfolio of Radiology diagnostics services including MRI, CT, Flouroscopy, DEXA Scan, Mammography, Dental CT,  3D Dental X-Ray, Digital X-Ray, Ultrasound, and Nuclear Medecine.<br><strong>www.alnasarlab.com</strong><br><strong><br></strong><br>
                         </p>
                     </div>
                 </div>
@@ -192,7 +192,7 @@
     
 
     <div class="container text-center">
-        <h2 class="pb-5 mbr-fonts-style display-2">Client Testimonials</h2>
+        <h2 class="pb-5 mbr-fonts-style display-2">Testimonials</h2>
 
         <div class="carousel slide" data-ride="carousel" role="listbox">
             <div class="carousel-inner">
