--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content4-h"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>News</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content1-x"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>Our Clients</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="contact.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
                 </li></ul>
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -167,7 +167,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="XtCuk8z4A+Qoh6mLPXQgGlJxqYCEOuGaXNkXXIg2DNv6ehjZdFCE/noBezUi1oIYBO4dICvgaWs4THW72gnnRrpuvDkZQ5s+dKImR2KyIrWGFwetkckDzk/VE9uyK9dW">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Nwc/iZrTeZ2duYsCPb0fpm6ydI+3d8I4fSpwAMK5hPQkfgswKahe7UdoSKAEn+fDolHCmiG+wnFcbJXzCMDkEEfhPyp5kYFVLcY9w244ei4Mlag1XWEi6UB3OjWBChnz">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
