--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,15 @@
   
   <title>Contact Us - Ethosmed - PACS & Teleradiology solutions in Pakistan, USA and South America. </title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -67,7 +68,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content1-x"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>Our Clients</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content1-x"><span class="mbrib-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Our Clients</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="contact.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
                 </li></ul>
@@ -76,7 +77,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
@@ -167,7 +168,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for getting in touch...we will get back to you soon!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PCDAH8IewsfmUXk1Q7XjUgPcsOAQ2Qwf4mpQShE7OGyXoTd+ytNLOcKhkKK7+v2qqbCB9J3Fwf5zVeB7yvFr8rSMRmOhtG2t3c3QRH1kvKzs2/m+pPeKnUunA5XzdWCv">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MXGx7ku6Bj+0xK90prZSa4H34qRXSqnAx+UlGbAjnbM0KwOm8aVHWFwcfoD1kwRMMBBgNGht5JHzPZM8gjd4d1kWogY2hBON4ajiv5u2AUCxwlmLQDfzfF8qj4Jqs9sN">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -266,12 +267,12 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
