--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="description" content="PACS & Teleradiology solutions in Pakistan, USA and South America. EthosMED’ revolutionary workflow infrastructure has been designed and developed using the expertise of radiologists, technicians, and PACS administrators.">
   
   <title>Ethosmed - Pakistan, USA and South America.</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -69,7 +69,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="#top"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content1-x"><span class="mobi-mbri mobi-mbri-alert mbr-iconfont mbr-iconfont-btn"></span>Our Clients</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
+                </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content1-x"><span class="mbrib-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Our Clients</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="contact.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
                 </li></ul>
@@ -78,17 +78,17 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
+<section class="engine"><a href="https://mobirise.info/q">free responsive website templates</a></section><section class="header5 cid-qCKAY5wYrl mbr-fullscreen mbr-parallax-background" id="header5-1">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(255, 255, 255);">
+    <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(239, 239, 239);">
     </div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>&nbsp;Discover What’s Possible</strong></h1>
-                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style">"It is not the strongest of the species that survives, nor the most intelligent, but the one most responsive to change." - Charles Darwin</p>
+                <p class="mbr-text align-center display-5 pb-3 mbr-fonts-style"><strong>"It is not the strongest of the species that survives, nor the most intelligent, but the one most responsive to change." - Charles Darwin</strong></p>
                 
             </div>
         </div>
