--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header4 cid-rn6iC4ULb3 mbr-fullscreen mbr-parallax-background" id="header4-t">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="header4 cid-rn6iC4ULb3 mbr-fullscreen mbr-parallax-background" id="header4-t">
 
     
 
@@ -98,7 +98,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/ethosmed-logo-1381x2820.png" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/ethosmed-logo-1381x2821.png" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
