--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-primary display-4" href="#top"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
+                    <a class="nav-link link text-primary display-4" href="index.html#header4-t"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features10-4"><span class="mobi-mbri mobi-mbri-layers mbr-iconfont mbr-iconfont-btn"></span>Services</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#content1-x"><span class="mbrib-globe-2 mbr-iconfont mbr-iconfont-btn"></span>Our Clients</a></li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#features12-a"><span class="mobi-mbri mobi-mbri-desktop mbr-iconfont mbr-iconfont-btn"></span>PACS &amp; Teleradiology</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-primary display-4" href="contact.html"><span class="mobi-mbri mobi-mbri-contact-form mbr-iconfont mbr-iconfont-btn"></span>Contact Us</a>
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="header4 cid-rn6iC4ULb3 mbr-fullscreen mbr-parallax-background" id="header4-t">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="header4 cid-rn6iC4ULb3 mbr-fullscreen mbr-parallax-background" id="header4-t">
 
     
 
@@ -98,7 +98,7 @@
                 
             </div>
             <div class="mbr-figure pt-5">
-                <img src="assets/images/ethosmed-logo-1381x2821.png" alt="Mobirise" title="" style="width: 60%;">
+                <img src="assets/images/ethosmed-logo-1381x2823.png" alt="Mobirise" title="" style="width: 60%;">
             </div>
         </div>
     </div>
